...
  "advertiser-description": "You’ve discovered Status thanks to a partner. Do you mind if Status checks your IP address once so they get rewarded? This information will not be used for anything else and it will be removed completely after 7 days.",
  "advertiser-starter-pack-accept": "Accept",
  "advertiser-starter-pack-decline": "Decline",
  "advertiser-starter-pack-description": "Here’s some crypto to get you started! Use it to get stickers, an ENS name and try dapps",
  "advertiser-starter-pack-title": "Starter Pack",
  "advertiser-title": "Privacy by default",
  "agree": "Agree",
  "agree-by-continuing": "By continuing you agree\n to our ",
  "airdrop-addresses": "Address for airdrops",
  "album-images-count": "{{album-images-count}} photos",
  "all": "All",
  "all-addresses": "All addresses",
  "all-changes-will-be-discarded": "All changes in shared addresses for permissions will be discarded.",
...
  "chaos-unicorn-day": "Chaos Unicorn Day",
  "chaos-unicorn-day-details": "🦄🦄🦄🦄🦄🦄🦄🚀!",
  "chat": "Chat",
  "chat-and-transact": "Chat and transact privately with friends",
  "chat-is-a-contact": "Contact",
  "chat-is-not-a-contact": "Not a contact",
  "chat-key": "Chat key",
  "chat-key-content": "Messages on the Status chat protocol are sent and received using encryption keys. The public chat key is a string of characters you share with others so they can send you messages in Status.",
  "chat-key-description": "Your unique public ID in Status. Others can use it to send you a contact request.",
  "chat-key-title": "Chat Key",
  "chat-link-previews": "Chat link previews",
  "chat-muted-for-1-hour": "Chat muted for 1 hour \n(until {{duration}})",
  "chat-muted-for-1-week": "Chat muted for 1 week \n(until {{duration}})",
...
    "one": "contact",
    "other": "contacts"
  },
  "contacts": "Contacts",
  "contacts-descr": "Your contacts will appear here. You will receive status updates from anyone you add as a contact",
  "contacts-empty": "Contacts with ENS names will appear here",
  "continue": "Continue",
  "continue-anyway": "Continue anyway",
  "contract-address": "Contract address",
  "contract-interaction": "Contract interaction",
  "contract-isnt-supported": "Contract is not supported",
  "copied-to-clipboard": "copied-to-clipboard",
  "copy-address": "Copy address",
...
  "create-multiaccount": "Generate keys",
  "create-new-key": "Get new keys",
  "create-new-keycard-pin": "Create new Keycard PIN",
  "create-new-profile": "Create new profile",
  "create-pin": "Create 6-digit passcode",
  "create-pin-description": "You'll need your card + this 6-digit passcode to unlock Status and to confirm transactions",
  "create-profile": "Create profile",
  "create-profile-keycard": "Create profile on empty Keycard",
  "create-profile-password-info-box-description": "Your Status keys are the foundation of your self-sovereign identity in Web3. You have complete control over these keys, which you can use to sign transactions, access your data, and interact with Web3 services.\n\nYour keys are always securely stored on your device and protected by your Status profile password. Status doesn't know your password an
  "create-profile-password-info-box-title": "About your profile password",
  "created-group-chat-description": "You created the group {{group-name}}",
  "crypto": "Crypto",
  "cryptokitty-name": "CryptoKitty #{{id}}",
...
  "ledger": "Ledger",
  "ledger-live": "Ledger live",
  "left": "left",
  "left-community": "You left “{{community}}”",
  "legacy": "Legacy",
  "les-ulc": "LES/ULC",
  "lets-go": "Let's go!",
  "lifestyle": "Lifestyle",
  "light": "Light",
  "light-client-enabled": "Light client",
  "limit": "Limit",
  "link-preview-loading-message": "Generating preview",
  "link-to-community": "Link to community",
...
  "max-priority-fee": "Max priority fee",
  "max-slippage": "Max slippage",
  "max-token": "Max: {{number}} {{token-symbol}}",
  "maximum-fee": "Maximum fee",
  "maximum-fee-desc": "Maximum overall price for the transaction. If the current block base fee exceeds this, your transaction will be included in a following block with a lower base fee.",
  "may": "May",
  "maybe-later": "Maybe later",
  "member": "Member",
  "member-ban": "Ban member",
  "member-kick": "Kick member",
  "members": {
    "one": "1 member",
    "other": "{{count}} members"
...
  "new-password": "New password",
  "new-pin-description": "Enter new 6-digit passcode",
  "new-public-group-chat": "Join public chat",
  "new-puk-description": "Enter new 12-digit PUK",
  "new-status": "New status",
  "new-tab": "New tab",
  "new-to-status": "I’m new to Status",
  "new-ui": "New UI",
  "news": "News",
  "next": "Next",
  "next-you-will": "Next, you will be asked to confirm the position of certain words in your recovery phrase",
  "NFT": "NFT",
  "nickname": "Nickname",
...
  "pairing-no-info": "No info",
  "pairing-please-set-a-name": "Please set a name for your device.",
  "pairing-slots-occupied": "All pairing slots are occupied",
  "paraswap-error": "Paraswap error: {{paraswap-error}}",
  "passphrase": "Passphrase",
  "password": "Password",
  "password-creation-confirm": "Confirm password",
  "password-creation-disclaimer": "I understand my password can't be recovered",
  "password-creation-dont-match": "Passwords do not match",
  "password-creation-hint": "Minimum 10 characters",
  "password-creation-match": "Passwords match",
  "password-creation-max-length-hint": "Maximum 100 characters",
  "password-creation-placeholder-1": "Type password",
  "password-creation-placeholder-2": "Repeat password",
  "password-creation-subtitle": "This password can't be recovered",
  "password-creation-tips-1": "Lower case",
  "password-creation-tips-2": "Upper case",
  "password-creation-tips-3": "Numbers",
  "password-creation-tips-4": "Symbols",
  "password-creation-tips-title": "Tips to improve",
...
  "start-chat": "Start chat",
  "start-conversation": "Start conversation",
  "start-fresh": "Start fresh",
  "start-fresh-subtitle": "Create a new profile from scratch",
  "start-group-chat": "Start group chat",
  "start-new-chat": "Start new chat",
  "start-using-status": "Start using Status",
  "start-with-space": "Cannot start with space",
  "starter-pack-coming": "Starter Pack coming your way",
  "starter-pack-coming-description": "Can take a few minutes to hours",
  "starter-pack-received": "Starter Pack received",
  "starter-pack-received-description": "Here’s some crypto to get you started! Use it to get stickers, an ENS name and try dapps",
  "status": "Status",
...
  "your-data-belongs-to-you": "If you lose your seed phrase you lose your data and funds",
  "your-data-belongs-to-you-description": "If you lose access, for example by losing your phone, you can only access your keys with your seed phrase. No one, but you has your seed phrase. Write it down. Keep it safe",
  "your-identifiers": "Your identicon ring, chat key and emojihash will help others tell you from impersonators",
  "your-key-pair-name-is-too-long": "Your key pair name is too long",
  "your-key-pair-name-is-too-short": "Your key pair name is too short",
  "your-keys": "Your keys",
  "your-name": "Your name",
  "your-price-limit": "Your price limit",
  "your-profile-information": "Your profile information",
  "your-recovery-phrase": "Your seed phrase",
  "your-recovery-phrase-description": "This is your seed phrase. You use it to prove that this is your wallet. You only get to see it once! Write it on paper and keep it in a secure place. You will need it if you lose or reinstall your wallet.",
  "your-tip-limit": "Your tip limit",
  "youre-on-mobile-network": "You’re on mobile network"
...
